# komunitin-lite-gtk3

./: .gitignore  LICENSE  MANIFEST.in  MANIFEST.ini  README.md  config.ini  config_default.ini  komunitin  komunitin_cli.py  komunitin_gtk.py  komunitin_lite  komunitin_lite.desktop  requirements.txt  run_komunitin_lite  setup.cfg  setup.py
.github/workflows/: python-app.yml
cli/: cli.py
core/: README.md  account.py  api_services.py  local_storage.py  oauth2.py  transfer.py
core/tests/: fake_objects.py  test_account.py  test_api_services.py  test_local_storage.py  test_oauth2.py  test_transfer.py
debian/: changelog  control  copyright  rules
gtk3/: application.py  dialog_loading.py  dialog_login.py  dialog_preferences.py  dialog_transfer.py  menu.py  signal_handlers.py  window.py
gtk3/glade/: application_window.glade  dialog_loading.glade  dialog_login.glade  dialog_preferences.glade  dialog_transfer.glade
komunitin_lite/: __init__.py  config_default.ini  komunitin_lite
komunitin_lite/cli/: cli.py
komunitin_lite/core/: account.py  api_services.py  local_storage.py  oauth2.py  transfer.py
komunitin_lite/gtk3/: application.py  dialog_loading.py  dialog_login.py  dialog_preferences.py  dialog_transfer.py  menu.py  window.py
po/: base.pot
tests/: test_account.py  test_api_services.py  test_local_storage.py  test_oauth2.py  test_transfer.py
tests/json/: me_response.json
utils/: account.py  api_services.py  local_storage.py  oauth2.py  test_utils.py  transfer.py
utils/tests/: fake_objects.py  test_api_services.py  test_local_storage.py  (+1 more)
(+16 files in other folders)
