[metadata]
name = komunitin-lite-gtk3-Xavier-Paniello
version = 0.0.1
author = Xavier Paniello
author_email = xavip@medusaweb.cat
description = Basic python GTK3 client for komunitin users
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/XaviP/komunitin-lite-gtk3
project_urls =
    Bug Tracker = https://github.com/XaviP/komunitin-lite-gtk3/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7777777ions.packages.find]
where = src
